# hebikani

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  wanikani.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml  pytest-lint-actions.yml  semantic-release.yml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  contributing.rst  index.rst  install.rst
hebikani/: __init__.py  graph.py  hebikani.py  input.py  settings.py  typing.py
src/wanikanicli/: __init__.py  input.py  wanikani.py
tests/: data.py  test_graph.py  test_hebikani.py  test_input.py  test_settings.py  test_wanikani.py
tests/assets/: no_utf.txt
wanikani_cli/: __init__.py  input.py  typing.py  wanikani.py
