[tool.poetry]
name = "hebikani"
version = "1.1.0"
description = "WaniKani command line interface"
authors = ["Augustin <ajitekun@gmail.com>"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/ajite/hebikani"
repository = "https://github.com/ajite/hebikani"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
romkan = "^0.2.1"
ascii-magic = "^1.6"
Pillow = "^9.1.0"
playsound = "^1.3.0"
pyobjc = {version = "^8.5", platform = "darwin"}
coverage = "^6.3.2"
colorama = "^0.4.4"
PyGObject = {version = "^3.42.1", platform = "linux"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
Sphinx = "^4.5.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hebikani = 'hebikani.hebikani:main'

[tool.semantic_release]
version_variable = [
    "hebikani/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"