[tool.poetry]
name = "hebikani"
version = "1.8.1"
description = "WaniKani command line interface"
authors = ["Augustin <ajitekun@gmail.com>"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/ajite/hebikani"
repository = "https://github.com/ajite/hebikani"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
ascii-magic = "^1.6"
Pillow = "^9.1.0"
pyobjc = {version = ">=8.5,<10.0", platform = "darwin"}
colorama = "^0.4.4"
PyGObject = {version = "^3.42.1", platform = "linux"}
playsound = "1.2.2"
mutagen = {version = "^1.45.1", platform = "win32"}
python-romkan-ng = "^0.3.0"
cairosvg = "^2.7.1"
halo = "^0.0.31"
importlib = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
Sphinx = "^5.1.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^1.0.0"
freezegun = "^1.2.1"
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hebikani = 'hebikani.hebikani:main'

[tool.semantic_release]
version_variable = [
    "hebikani/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
upload_to_release = true
build_command = "pip install poetry && poetry build"