[metadata]
name = WaniKaniCLI
version = attr: wanikani.__version__
license = MIT
description = Versatile tool for browsing Odoo / OpenERP data
long_description = file: README.rst
author = Augustin Cisterne-Kaas
platforms = any 
keywords = wanikani japanese srs


[options]
python_requires = >=3.7, <4
test_suite = tests
install_requires =
    requests

[options.extras_require]
test = 
    pytest
    coverage
