[metadata]
name = wanikanicli
version = attr: src.wanikanicli.__version__
license = MIT
long_description = file: README.rst
author = Augustin Cisterne-Kaas
platforms = any
keywords = wanikani japanese srs


[options]
package_dir =
    = src
python_requires = >=3.7, <4
setup_requires = pytest-runner
install_requires =
    requests
    romkan
    ascii_magic
    pillow
tests_require = pytest

[options.extras_require]
test =
    pytest
    coverage
    flake8

[options.entry_points]
console_scripts =
    wanikani-cli = wanikanicli.wanikani:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests

[flake8]
per-file-ignores =
    # line too long
    tests/data.py: E501